Update API URL to live backend

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
             try {
                 // This is the core part: talking to our Python backend
-                const response = await fetch('http://127.0.0.1:5000/claim', {
+                const response = await fetch('https-your-faucet.onrender.com/claim', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
