--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/blockadblock/3.2.1/blockadblock.min.js"></script>
+
     <style>
         :root {
             --dark-bg: #0D1117;
@@ -131,9 +134,6 @@
         <h1>MEMECOIN FAUCET</h1>
         <p>Your daily dose of memecoins, served fresh!</p>
 
-        <div class="ad-box">
-            </div>
-
         <input type="text" id="walletAddress" placeholder="Enter your Solana address...">
         <button id="claimButton">Claim Tokens!</button>
         <div id="message"></div>
@@ -155,62 +155,67 @@
 
     <script>
         // --- JavaScript Magic Starts Here ---
-        // (The JavaScript code is the same and will work perfectly!)
+        // (This is the new, updated script!)
 
         const claimButton = document.getElementById('claimButton');
         const walletAddressInput = document.getElementById('walletAddress');
         const messageDiv = document.getElementById('message');
 
-        function checkAdBlocker() {
-            const adBanner = document.querySelector('.ad-banner');
-
-            // If the ad blocker hid our bait div, its height will be 0
-            if (!adBanner || adBanner.offsetHeight === 0) {
-                claimButton.disabled = true;
-                claimButton.textContent = 'Ad Blocker Detected';
-                showMessage('Please disable your ad blocker to support and use the faucet.', 'error');
-            }
-        }
-
-        // Wait a tiny bit for ad blockers to run, then check.
-        // We use setTimeout to give the ad blocker a moment to remove our bait file.
-        setTimeout(checkAdBlocker, 500);
-
-        claimButton.addEventListener('click', async () => {
-            const walletAddress = walletAddressInput.value;
-            if (!walletAddress) {
-                showMessage('Please enter a wallet address!', 'error');
-                return;
-            }
-            claimButton.disabled = true;
-            claimButton.textContent = 'Claiming...';
-            showMessage('', 'info');
-            try {
-                const response = await fetch('https-your-faucet.onrender.com/claim', { // Remember to update this URL!
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json', },
-                    body: JSON.stringify({ wallet_address: walletAddress }),
-                });
-                const data = await response.json();
-                if (response.ok) {
-                    showMessage(data.message, 'success');
-                    const explorerLink = `https://explorer.solana.com/tx/${data.transaction_signature}`;
-                    messageDiv.innerHTML += ` <a href="${explorerLink}" target="_blank" style="color: var(--neon-end);">View Transaction</a>`;
-                } else {
-                    showMessage(data.error, 'error');
-                }
-            } catch (error) {
-                console.error('Fetch error:', error);
-                showMessage('Could not connect to the faucet server.', 'error');
-            } finally {
-                claimButton.disabled = false;
-                claimButton.textContent = 'Claim Tokens!';
-            }
-        });
-
         function showMessage(text, type) {
             messageDiv.textContent = text;
             messageDiv.className = type;
+        }
+
+        // Meow! This is the new part for adblock detection, nya!
+        if(typeof blockAdBlock === 'undefined') {
+            // If the library is blocked or not found, assume ad blocker is active.
+            claimButton.disabled = true;
+            claimButton.textContent = 'Ad Blocker Detected';
+            showMessage('Please disable your ad blocker to support and use the faucet.', 'error');
+        } else {
+            // The library loaded successfully, so we can set up our click event.
+            blockAdBlock.onDetected(function() {
+                claimButton.disabled = true;
+                claimButton.textContent = 'Ad Blocker Detected';
+                showMessage('Please disable your ad blocker to support and use the faucet.', 'error');
+            });
+
+            blockAdBlock.onNotDetected(function() {
+                // The claim button is enabled by default, so we don't need to do anything here, nya!
+                // We just let the rest of the code run normally.
+            });
+
+            claimButton.addEventListener('click', async () => {
+                const walletAddress = walletAddressInput.value;
+                if (!walletAddress) {
+                    showMessage('Please enter a wallet address!', 'error');
+                    return;
+                }
+                claimButton.disabled = true;
+                claimButton.textContent = 'Claiming...';
+                showMessage('', 'info');
+                try {
+                    const response = await fetch('https://your-faucet.onrender.com/claim', { // Remember to update this URL!
+                        method: 'POST',
+                        headers: { 'Content-Type': 'application/json', },
+                        body: JSON.stringify({ wallet_address: walletAddress }),
+                    });
+                    const data = await response.json();
+                    if (response.ok) {
+                        showMessage(data.message, 'success');
+                        const explorerLink = `https://explorer.solana.com/tx/${data.transaction_signature}`;
+                        messageDiv.innerHTML += ` <a href="${explorerLink}" target="_blank" style="color: var(--neon-end);">View Transaction</a>`;
+                    } else {
+                        showMessage(data.error, 'error');
+                    }
+                } catch (error) {
+                    console.error('Fetch error:', error);
+                    showMessage('Could not connect to the faucet server.', 'error');
+                } finally {
+                    claimButton.disabled = false;
+                    claimButton.textContent = 'Claim Tokens!';
+                }
+            });
         }
     </script>
 </body>
