--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/blockadblock/3.2.1/blockadblock.min.js"></script>
-
     <style>
         :root {
             --dark-bg: #0D1117;
@@ -23,7 +21,7 @@
         body {
             font-family: 'Poppins', sans-serif;
             display: flex;
-            flex-direction: column; /* Allow multiple sections */
+            flex-direction: column;
             align-items: center;
             min-height: 100vh;
             margin: 0;
@@ -46,7 +44,6 @@
             font-size: 2.5rem;
             font-weight: 700;
             margin-bottom: 0.5rem;
-            /* This is the magic for neon gradient text */
             background: linear-gradient(90deg, var(--neon-start), var(--neon-end));
             -webkit-background-clip: text;
             background-clip: text;
@@ -155,7 +152,6 @@
 
     <script>
         // --- JavaScript Magic Starts Here ---
-        // (This is the new, updated script!)
 
         const claimButton = document.getElementById('claimButton');
         const walletAddressInput = document.getElementById('walletAddress');
@@ -166,57 +162,60 @@
             messageDiv.className = type;
         }
 
-        // Meow! This is the new part for adblock detection, nya!
-        if(typeof blockAdBlock === 'undefined') {
-            // If the library is blocked or not found, assume ad blocker is active.
-            claimButton.disabled = true;
-            claimButton.textContent = 'Ad Blocker Detected';
-            showMessage('Please disable your ad blocker to support and use the faucet.', 'error');
-        } else {
-            // The library loaded successfully, so we can set up our click event.
-            blockAdBlock.onDetected(function() {
+        // Meow! This is our new, clever adblock detection function, nya!
+        function checkAdBlocker() {
+            // A common URL that is blocked by many adblockers
+            const adUrl = 'https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js';
+
+            // We try to fetch this URL, but we use a "no-cors" mode to prevent errors
+            // if the request fails, it's a good sign that the ad blocker is working
+            fetch(new Request(adUrl)).catch(() => {
+                // If the fetch fails, it means the ad blocker is working!
                 claimButton.disabled = true;
                 claimButton.textContent = 'Ad Blocker Detected';
                 showMessage('Please disable your ad blocker to support and use the faucet.', 'error');
             });
-
-            blockAdBlock.onNotDetected(function() {
-                // The claim button is enabled by default, so we don't need to do anything here, nya!
-                // We just let the rest of the code run normally.
-            });
-
-            claimButton.addEventListener('click', async () => {
-                const walletAddress = walletAddressInput.value;
-                if (!walletAddress) {
-                    showMessage('Please enter a wallet address!', 'error');
-                    return;
-                }
-                claimButton.disabled = true;
-                claimButton.textContent = 'Claiming...';
-                showMessage('', 'info');
-                try {
-                    const response = await fetch('https://your-faucet.onrender.com/claim', { // Remember to update this URL!
-                        method: 'POST',
-                        headers: { 'Content-Type': 'application/json', },
-                        body: JSON.stringify({ wallet_address: walletAddress }),
-                    });
-                    const data = await response.json();
-                    if (response.ok) {
-                        showMessage(data.message, 'success');
-                        const explorerLink = `https://explorer.solana.com/tx/${data.transaction_signature}`;
-                        messageDiv.innerHTML += ` <a href="${explorerLink}" target="_blank" style="color: var(--neon-end);">View Transaction</a>`;
-                    } else {
-                        showMessage(data.error, 'error');
-                    }
-                } catch (error) {
-                    console.error('Fetch error:', error);
-                    showMessage('Could not connect to the faucet server.', 'error');
-                } finally {
-                    claimButton.disabled = false;
-                    claimButton.textContent = 'Claim Tokens!';
-                }
-            });
         }
+
+        // We check for adblocker after the page loads, meow!
+        setTimeout(checkAdBlocker, 500);
+
+        claimButton.addEventListener('click', async () => {
+            const walletAddress = walletAddressInput.value;
+            if (!walletAddress) {
+                showMessage('Please enter a wallet address!', 'error');
+                return;
+            }
+
+            if (claimButton.disabled) {
+                return;
+            }
+
+            claimButton.disabled = true;
+            claimButton.textContent = 'Claiming...';
+            showMessage('', 'info');
+            try {
+                const response = await fetch('https-your-faucet.onrender.com/claim', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json', },
+                    body: JSON.stringify({ wallet_address: walletAddress }),
+                });
+                const data = await response.json();
+                if (response.ok) {
+                    showMessage(data.message, 'success');
+                    const explorerLink = `https://explorer.solana.com/tx/${data.transaction_signature}`;
+                    messageDiv.innerHTML += ` <a href="${explorerLink}" target="_blank" style="color: var(--neon-end);">View Transaction</a>`;
+                } else {
+                    showMessage(data.error, 'error');
+                }
+            } catch (error) {
+                console.error('Fetch error:', error);
+                showMessage('Could not connect to the faucet server.', 'error');
+            } finally {
+                claimButton.disabled = false;
+                claimButton.textContent = 'Claim Tokens!';
+            }
+        });
     </script>
 </body>
 </html>
