--- a/index.html
+++ b/index.html
@@ -162,19 +162,26 @@
             messageDiv.className = type;
         }
 
-        // Meow! This is our new, clever adblock detection function, nya!
-        function checkAdBlocker() {
-            // A common URL that is blocked by many adblockers
+        // This is our new, extra-clever adblock detection function, nya!
+        async function checkAdBlocker() {
+            const startTime = performance.now();
             const adUrl = 'https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js';
 
-            // We try to fetch this URL, but we use a "no-cors" mode to prevent errors
-            // if the request fails, it's a good sign that the ad blocker is working
-            fetch(new Request(adUrl)).catch(() => {
+            try {
+                // We try to fetch this URL, but we use a "no-cors" mode to prevent errors
+                await fetch(new Request(adUrl));
+            } catch (e) {
                 // If the fetch fails, it means the ad blocker is working!
-                claimButton.disabled = true;
-                claimButton.textContent = 'Ad Blocker Detected';
-                showMessage('Please disable your ad blocker to support and use the faucet.', 'error');
-            });
+                const endTime = performance.now();
+                const duration = endTime - startTime;
+
+                // Brave Shields blocks requests very quickly (less than 5ms)
+                if (duration < 50) {
+                    claimButton.disabled = true;
+                    claimButton.textContent = 'Ad Blocker Detected';
+                    showMessage('Please disable your ad blocker to support and use the faucet.', 'error');
+                }
+            }
         }
 
         // We check for adblocker after the page loads, meow!
@@ -195,7 +202,7 @@
             claimButton.textContent = 'Claiming...';
             showMessage('', 'info');
             try {
-                const response = await fetch('https-your-faucet.onrender.com/claim', {
+                const response = await fetch('https://your-faucet.onrender.com/claim', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json', },
                     body: JSON.stringify({ wallet_address: walletAddress }),
