--- a/index.html
+++ b/index.html
@@ -162,31 +162,29 @@
             messageDiv.className = type;
         }
 
-        // This is our new, extra-clever adblock detection function, nya!
+        // This is our new, more precise adblock detection function, nya!
         function checkAdBlocker() {
-            // Part 1: Check for a known global variable from a common ad script.
-            const globalVariableCheck = typeof window.ezstandalone === 'undefined' ? true : false;
+            const baitScript = document.createElement('script');
+            baitScript.src = 'https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js';
 
-            // Part 2: Check for a hidden CSS element.
-            const bait = document.createElement('div');
-            bait.style.cssText = 'width: 1px; height: 1px; position: absolute; top: -9999px; visibility: hidden;';
-            bait.className = 'ad-container';
-            document.body.appendChild(bait);
-            const hiddenElementCheck = bait.offsetHeight === 0 ? true : false;
-            document.body.removeChild(bait);
-
-            // If either of our two checks pass, we know an ad blocker is active.
-            if (globalVariableCheck || hiddenElementCheck) {
+            // Set up our event listeners, nya!
+            baitScript.onload = function() {
+                // If the script loads successfully, no ad blocker detected!
+                claimButton.disabled = false;
+                claimButton.textContent = 'Claim Tokens!';
+            };
+            baitScript.onerror = function() {
+                // If the script fails to load, an ad blocker is likely active!
                 claimButton.disabled = true;
                 claimButton.textContent = 'Ad Blocker Detected';
                 showMessage('Please disable your ad blocker to support and use the faucet.', 'error');
-            } else {
-                claimButton.disabled = false;
-                claimButton.textContent = 'Claim Tokens!';
-            }
+            };
+
+            // Append the script to the body to trigger the load attempt.
+            document.body.appendChild(baitScript);
         }
 
-        // We check for adblocker after the page loads, meow!
+        // We check for adblocker after a short delay, meow!
         setTimeout(checkAdBlocker, 500);
 
         claimButton.addEventListener('click', async () => {
@@ -204,7 +202,7 @@
             claimButton.textContent = 'Claiming...';
             showMessage('', 'info');
             try {
-                const response = await fetch('https-your-faucet.onrender.com/claim', {
+                const response = await fetch('https://your-faucet.onrender.com/claim', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json', },
                     body: JSON.stringify({ wallet_address: walletAddress }),
