--- a/index.html
+++ b/index.html
@@ -162,30 +162,48 @@
             messageDiv.className = type;
         }
 
-        // This is our new, more precise adblock detection function, nya!
-        function checkAdBlocker() {
+        let adBlockerDetected = false;
+
+        // Part 1: Check if an ad script fails to load.
+        const checkNetwork = new Promise(resolve => {
             const baitScript = document.createElement('script');
             baitScript.src = 'https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js';
+            baitScript.onload = () => resolve(false); // Ad blocker not detected
+            baitScript.onerror = () => resolve(true); // Ad blocker detected
+            document.head.appendChild(baitScript);
+            setTimeout(() => resolve(false), 2000); // Timeout to prevent hangs
+        });
 
-            // Set up our event listeners, nya!
-            baitScript.onload = function() {
-                // If the script loads successfully, no ad blocker detected!
-                claimButton.disabled = false;
-                claimButton.textContent = 'Claim Tokens!';
-            };
-            baitScript.onerror = function() {
-                // If the script fails to load, an ad blocker is likely active!
+        // Part 2: Check for a common CSS hiding trick.
+        const checkCSS = new Promise(resolve => {
+            const baitDiv = document.createElement('div');
+            baitDiv.className = 'ad-container'; // A common class name to bait ad blockers
+            baitDiv.style.cssText = 'position: absolute; visibility: hidden; width: 1px; height: 1px;';
+            document.body.appendChild(baitDiv);
+
+            setTimeout(() => {
+                const isBlocked = baitDiv.offsetHeight === 0;
+                document.body.removeChild(baitDiv);
+                resolve(isBlocked);
+            }, 500);
+        });
+
+        // Combine the results of both checks
+        Promise.all([checkNetwork, checkCSS]).then(results => {
+            const networkBlocked = results[0];
+            const cssBlocked = results[1];
+
+            adBlockerDetected = networkBlocked || cssBlocked;
+
+            if (adBlockerDetected) {
                 claimButton.disabled = true;
                 claimButton.textContent = 'Ad Blocker Detected';
                 showMessage('Please disable your ad blocker to support and use the faucet.', 'error');
-            };
-
-            // Append the script to the body to trigger the load attempt.
-            document.body.appendChild(baitScript);
-        }
-
-        // We check for adblocker after a short delay, meow!
-        setTimeout(checkAdBlocker, 500);
+            } else {
+                claimButton.disabled = false;
+                claimButton.textContent = 'Claim Tokens!';
+            }
+        });
 
         claimButton.addEventListener('click', async () => {
             const walletAddress = walletAddressInput.value;
@@ -194,15 +212,15 @@
                 return;
             }
 
-            if (claimButton.disabled) {
-                return;
+            if (adBlockerDetected) {
+                return; // Prevent claiming if ad blocker is active
             }
 
             claimButton.disabled = true;
             claimButton.textContent = 'Claiming...';
             showMessage('', 'info');
             try {
-                const response = await fetch('https://your-faucet.onrender.com/claim', {
+                const response = await fetch('https-your-faucet.onrender.com/claim', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json', },
                     body: JSON.stringify({ wallet_address: walletAddress }),
