--- a/index.html
+++ b/index.html
@@ -156,54 +156,30 @@
         const claimButton = document.getElementById('claimButton');
         const walletAddressInput = document.getElementById('walletAddress');
         const messageDiv = document.getElementById('message');
+        let adBlockerDetected = false;
 
         function showMessage(text, type) {
             messageDiv.textContent = text;
             messageDiv.className = type;
         }
 
-        let adBlockerDetected = false;
+        // This is our new, more precise adblock detection function, nya!
+        function checkAdBlocker() {
+            // A common URL that is blocked by many adblockers
+            const adUrl = 'https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js';
 
-        // Part 1: Check if an ad script fails to load.
-        const checkNetwork = new Promise(resolve => {
-            const baitScript = document.createElement('script');
-            baitScript.src = 'https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js';
-            baitScript.onload = () => resolve(false); // Ad blocker not detected
-            baitScript.onerror = () => resolve(true); // Ad blocker detected
-            document.head.appendChild(baitScript);
-            setTimeout(() => resolve(false), 2000); // Timeout to prevent hangs
-        });
-
-        // Part 2: Check for a common CSS hiding trick.
-        const checkCSS = new Promise(resolve => {
-            const baitDiv = document.createElement('div');
-            baitDiv.className = 'ad-container'; // A common class name to bait ad blockers
-            baitDiv.style.cssText = 'position: absolute; visibility: hidden; width: 1px; height: 1px;';
-            document.body.appendChild(baitDiv);
-
-            setTimeout(() => {
-                const isBlocked = baitDiv.offsetHeight === 0;
-                document.body.removeChild(baitDiv);
-                resolve(isBlocked);
-            }, 500);
-        });
-
-        // Combine the results of both checks
-        Promise.all([checkNetwork, checkCSS]).then(results => {
-            const networkBlocked = results[0];
-            const cssBlocked = results[1];
-
-            adBlockerDetected = networkBlocked || cssBlocked;
-
-            if (adBlockerDetected) {
+            // We try to fetch this URL.
+            fetch(new Request(adUrl)).catch(() => {
+                // If the fetch fails, it means the ad blocker is working!
+                adBlockerDetected = true;
                 claimButton.disabled = true;
                 claimButton.textContent = 'Ad Blocker Detected';
                 showMessage('Please disable your ad blocker to support and use the faucet.', 'error');
-            } else {
-                claimButton.disabled = false;
-                claimButton.textContent = 'Claim Tokens!';
-            }
-        });
+            });
+        }
+
+        // We check for adblocker after a short delay, meow!
+        setTimeout(checkAdBlocker, 500);
 
         claimButton.addEventListener('click', async () => {
             const walletAddress = walletAddressInput.value;
@@ -213,7 +189,7 @@
             }
 
             if (adBlockerDetected) {
-                return; // Prevent claiming if ad blocker is active
+                return;
             }
 
             claimButton.disabled = true;
