--- a/index.html
+++ b/index.html
@@ -177,11 +177,10 @@
                 showMessage('Please disable your ad blocker to support and use the faucet.', 'error');
             });
         }
-        // setTimeout(checkAdBlocker, 500);
+        setTimeout(checkAdBlocker, 500);
 
         // Nya! The claim button logic now handles everything, meow!
         claimButton.addEventListener('click', async () => {
-            console.log("Button clicked, meow!");
             // First, check if the wallet is connected. If not, connect it.
             if (!provider || !provider.isConnected) {
                 if (!window.solana) {
@@ -210,11 +209,9 @@
                 return;
             }
 
-            /*
             if (adBlockerDetected) {
                 return;
             }
-            */
 
             claimButton.disabled = true;
             claimButton.textContent = 'Claiming...';
